--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,29 @@
         "files": [ "scaffold-package-command.php" ]
     },
     "require": {
-        "wp-cli/scaffold-command": "*"
+        "wp-cli/scaffold-command": "*",
+        "wp-cli/wp-cli": "2"
     },
     "require-dev": {
-        "wp-cli/wp-cli": "*",
-        "behat/behat": "~2.5"
+        "behat/behat": "~2.5",
+        "wp-cli/wp-cli-tests": "2"
+    },
+    "scripts": {
+        "lint": "run-linter-tests",
+        "phpcs": "run-phpcs-tests",
+        "phpunit": "run-php-unit-tests",
+        "behat": "run-behat-tests",
+        "prepare-tests": "install-package-tests",
+        "test": [
+            "@lint",
+            "@phpcs",
+            "@phpunit",
+            "@behat"
+        ]
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.x-dev"
+            "dev-master": "2.x-dev"
         },
         "commands": [
             "scaffold package",
